<resources>
    <string name="app_name">کافه شهر</string>
    <string name="send_to">send_to</string>

    <string name="str_img1">Image1</string>
    <string name="str_img2">Image2</string>
    <string name="str_img3">Image3</string>
    <string name="str_img4">Image4</string>
    <string name="news">اخبار برگزیده</string>
    <string name="comment">پیامک‌هایی که در حدود قانون و ادب بوده، توهین و هتک حرمت شخصیت‌های حقیقی، حقوقی و قومیتی نباشد، پس از بررسی منتشر می‌شود.
</string>
    <string name="content"><b>آیت الله جنتی: آمریکا و اسرائیل در حال سقوط هستند/صبح پیروزی انقلاب و اسلام نزدیک است.</b></string>
    <string name="info">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="msn">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی در شصت و سه درصد گذشته، حال و آینده شناخت فراوان جامعه و متخصصان را می طلبد تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی و فرهنگ پیشرو در زبان فارسی ایجاد کرد. در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد. </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action3_sub1">همه</string>
    <string name="action3_sub2"> هفته گذشته</string>
    <string name="action3_sub3"> ماه گذشته</string>
    <string name="fontnews">تعیین اندازه فونت متن خبر</string>
    <string name="fontcomment"> تعیین اندازه فونت نظرات خبر</string>
    <string-array name="fontsize">
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
        <item>30</item>
        <item>32</item>

    </string-array>
    <string name="fonttest">این فونت برای من خواناتر است</string>
    <string-array name="fontfamily">
        <item>فونت شماره یک</item>
        <item>فونت شماره دو</item>
    </string-array>
    <string name="select">انتخاب</string>
    <string name="customGallery">Custom Gallery</string>
    <string name="mainTitle">Select MultipleImages From Gallery</string>
    <string name="openCustomGallery">Open Custom Gallery</string>
    <string name="selectedImages">Selected Images will display below</string>
</resources>
