<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.Kafeshahrpackage.Kafeshahr.FragmentOne"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E4E6E3">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card"
            >

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/textColorPrimary"
                android:layout_gravity="right"
                android:textDirection="rtl"
                android:layoutDirection="rtl"
                android:id="@+id/myRadioGroup"
                android:orientation="horizontal"
                android:checkedButton="@+id/sound"
                android:gravity="center_vertical"
                android:weightSum="1"
                >

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rb1"
                    android:text="@string/action3_sub1"
                    android:checked="true"
                    android:layout_weight="0.33"/>

                <RadioButton

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:id="@+id/rb2"
                    android:layout_weight="0.33"
                    android:text="@string/action3_sub2" />

                <RadioButton

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_weight="0.33"
                    android:id="@+id/rb3"

                    android:text="@string/action3_sub3" />

            </RadioGroup>
        </android.support.v7.widget.CardView>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E4E6E3"
        android:layout_below="@+id/card"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pd"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center|top"
            android:layout_marginTop="50dp"
            />
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/activity_main_swipe_refresh_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            />
        </android.support.v4.widget.SwipeRefreshLayout>
       <!-- tools:listitem="@layout/item_list"-->


    </FrameLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/pdloadmore"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center|bottom"

            />
    </RelativeLayout>
</RelativeLayout>
