<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:background="#fff">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="سایز فونت خبر"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp">

        <Spinner
            android:id="@+id/fontnews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/fontsize"
            android:background="#fff"
            android:backgroundTint="#fff"
            android:popupBackground="#fff"/>

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fontnews"
android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
       android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">
        <Spinner
            android:id="@+id/fontcomment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
            android:entries="@array/fontsize"
            android:background="#fff"
            android:backgroundTint="#fff"
            android:popupBackground="#fff"
            />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fontcomment"
            android:layout_alignParentRight="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">
<TextView
    android:id="@+id/txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="نوع فونت خبر"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="15dp"
    android:textSize="18sp"
    android:textStyle="bold"
    android:textColor="@color/black"/>
        <!--<Spinner
            android:layout_below="@+id/txt"
            android:id="@+id/fontfamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:entries="@array/fontfamily"
            android:layout_toStartOf="@+id/txt"
            android:prompt="@string/select"/>-->
        <RadioGroup
            android:id="@+id/fontfamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_gravity="right"
            android:textDirection="rtl"
            android:layoutDirection="rtl" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="فونت شماره یک"
android:textColor="@color/black"
                android:textSize="16sp"
                />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="فونت شماره دو "
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="فونت شماره سه "
                android:textColor="@color/black"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="فونت شماره چهار "
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </RadioGroup>
        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/txt3"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_below="@+id/fontfamily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fonttest"

android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/send"
            android:background="@color/transparent"
            android:textColor="@color/accent"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@id/txt3"
            android:layout_centerHorizontal="true"
            android:text="ثبت"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
           />
    </RelativeLayout>
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RelativeLayout>
    </LinearLayout>
