<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".page1" >
    <include layout="@layout/custom_action_bar"/>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            >

            <!-- <FrameLayout android:layout_height="match_parent" android:orientation="horizontal"
                android:layout_width="match_parent" android:layout_weight="1" android:layout_marginRight="4dp">
-->
            <!-- start flip-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"

                    >

                    <ViewFlipper
                        android:id="@+id/flipper1"
                        android:layout_width="275dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:flipInterval="3000"
                        android:inAnimation="@anim/slide_in_right"
                        android:outAnimation="@anim/slide_out_left">

                        <ImageButton
                            android:id="@+id/btn1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"

                            android:contentDescription="@string/str_img1"
                         />
                      <!--  android:src="@drawable/image1"-->
                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"

                            android:contentDescription="@string/str_img2"
                             />

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"

                            android:contentDescription="@string/str_img3"
                           />

                        <ImageButton
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"

                            android:contentDescription="@string/str_img4"
                          />


                    </ViewFlipper>

                    <LinearLayout

                        android:layout_width="274dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|bottom"
                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/titleTextView"
                            android:layout_width="277dp"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="اخبار مهم"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
            <!-- end flip-->
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
  <!--  <EditText
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/a1"/>
    <EditText
        android:id="@+id/a1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"/>-->
            <ImageButton
                android:id="@+id/a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:contentDescription="@string/str_img3"

                android:layout_alignParentTop="true"
                android:layout_above="@+id/a1"/>

            <ImageButton
                android:id="@+id/a1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"

                android:contentDescription="@string/str_img4"

               />
</LinearLayout>
        </TableRow>


       <!-- <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal">

                    <ImageButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:src="@drawable/great_wall_of_china" />

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|bottom"

                        android:background="@android:drawable/screen_background_dark_transparent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:padding="12dp"
                            android:text="برگزیده"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/text_size"
                            android:textStyle="bold" />
                    </LinearLayout>

                </FrameLayout>
            </LinearLayout>
        </TableRow>-->

    </TableLayout>

    <!--

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/great_wall_of_china"/>

                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/christ_the_redeemer"/>



            </TableRow>
            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" >

                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/taj_mahal"/>

                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/chichen_itza"/>

            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="one" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="two" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="three" />

        </LinearLayout>-->

</LinearLayout>





<!--<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.malihe.severlearn.page1">-->
   <!-- <include layout="@layout/custom_action_bar"/>-->
    <!--<android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>-->

<!--</android.support.design.widget.CoordinatorLayout>-->

